chore: scaffold additional structure by Zerocode

--- a/locales/de.json
+++ b/locales/de.json
@@ -1,3 +1,4 @@
 {
-  "CFBundleDisplayName": ""
+  "home.title": "Vora",
+  "home.subtitle": "Beseitigung der 'Eingabe- und Organisations'-Aufgaben, die das Denken behindern"
 }
