--- a/locales/es.json
+++ b/locales/es.json
@@ -1,3 +1,4 @@
 {
-  "CFBundleDisplayName": ""
+  "home.title": "Vora",
+  "home.subtitle": "Eliminando las tareas de 'entrada y organización' que obstaculizan el pensamiento"
 }
