--- a/locales/hi.json
+++ b/locales/hi.json
@@ -1,3 +1,4 @@
 {
-  "CFBundleDisplayName": ""
+  "home.title": "वोरा",
+  "home.subtitle": "विचारों में बाधा डालने वाले 'इनपुट और व्यवस्थित' कार्यों को समाप्त करना"
 }
