--- a/locales/pt.json
+++ b/locales/pt.json
@@ -1,3 +1,4 @@
 {
-  "CFBundleDisplayName": ""
+  "home.title": "Vora",
+  "home.subtitle": "Eliminando as tarefas de 'entrada e organização' que dificultam o pensamento"
 }
