--- a/locales/ar.json
+++ b/locales/ar.json
@@ -1,3 +1,4 @@
 {
-  "CFBundleDisplayName": ""
+  "home.title": "فورا",
+  "home.subtitle": "القضاء على مهام 'الإدخال والتنظيم' التي تعيق التفكير"
 }
