--- a/locales/en.json
+++ b/locales/en.json
@@ -1,3 +1,4 @@
 {
-  "CFBundleDisplayName": ""
+  "home.title": "Vora",
+  "home.subtitle": "Eliminating the 'input and organize' tasks that hinder thought"
 }
