--- a/locales/fr.json
+++ b/locales/fr.json
@@ -1,3 +1,4 @@
 {
-  "CFBundleDisplayName": ""
+  "home.title": "Vora",
+  "home.subtitle": "Éliminer les tâches 'saisie et organisation' qui entravent la pensée"
 }
